--- a/Data-Engineering/Airflow/example_spark_pi_oss.yaml
+++ b/Data-Engineering/Airflow/example_spark_pi_oss.yaml
@@ -19,11 +19,11 @@ spec:
     coreLimit: "1000m"
     memory: "512m"
     labels:
-      version: '{{dag_run.conf["Spark-image-version"]}}'
+      version: '{{dag_run.conf["spark_image_version"]}}'
   executor:
     cores: 1
     instances: 2
     coreLimit: "1000m"
     memory: "512m"
     labels:
-      version: '{{dag_run.conf["Spark-image-version"]}}'
+      version: '{{dag_run.conf["spark_image_version"]}}'
